[package]
name = "carbon-decode"
description = "A simple lib to decode Carbon's strategies."
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "fill_in.com"
repository = "fill_in.com"


[dependencies]
alloy = { version = "0.12.5", features = ["essentials"] }
eyre = "0.6.12"
rust_decimal = { version = "1.36.0", features = ["maths"] }
serde = "1.0.219"
serde_json = "1.0.140"
