[package]
name = "carbon-defi-decode"
description = "A simple lib to decode Carbon DeFi strategies."
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/t0rbik/carbon-decode"
repository = "https://github.com/t0rbik/carbon-decode"


[dependencies]
alloy-core = { version = "0.8.22", features = ["sol-types", 'serde'] }
eyre = "0.6.12"
rust_decimal = { version = "1.36.0", features = ["maths"] }
serde = "1.0.219"
serde_json = "1.0.140"
